fix: z index now applies to register now button, allowing frog to go behind

--- a/app/(pages)/about-us/_components/RegisterNow/RegisterNow.module.scss
+++ b/app/(pages)/about-us/_components/RegisterNow/RegisterNow.module.scss
@@ -81,6 +81,7 @@
     .registerNow {
         // button background styling
         display: flex;
+        position: relative;
         width: 342px;
         height: 48px;
         padding: 12px 66px;
